<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>extra_rviz_panel</name>
  <version>0.0.0</version>
  <description>RViz Panel</description>
  <maintainer email="example@example.com">example</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>rosbag2_transport</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>